--- a/Contact-me.html
+++ b/Contact-me.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Contact-information</title>
   </head>
+  <link rel="stylesheet" href="css/styles.css">
   <body>
 <h1>My Contact Details</h1>
 <p>Raipura Govt. college road,Raipura,Narshingdi.</p>
