--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>Shuvo's personal site</title>
   </head>
+
+<link rel="stylesheet" href="css/styles.css">
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/Edit.jpg" alt="Shuvo's profile picture" width="300" height="300"></td>
+        <td><img src="images/circle-cropped.png" alt="Shuvo's profile picture" width="300" height="300"></td>
         <td><h1>Mahdi Hasan Shuvo</h1>
         <p><em>A Full Stack <strong>Web Developer</strong></em></p>
         <p>I am a full stack web Developer and final year computer science undergraduate student</p></td>
