--- a/Hobbies.html
+++ b/Hobbies.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>My hobbies</title>
   </head>
+  <link rel="stylesheet" href="css/styles.css">
   <body>
     <h1>Interest</h1>
     <ol type="1">
